2009-05-29 Karim Gemayel <kgemayel@process-one.net>

        * examples/bosh_client.erl : API renaming :
                make_jid -> make ;
        * examples/echo_client.erl : API renaming :
                make_jid -> make ;
        * include/internal/exmpp_xmpp.hrl : API renaming :
                make_jid -> make ;
                ldomain -> prep_domain ;
                lnode -> prep_node ;
        * src/client/exmpp_client_binding.erl : API renaming :
                parse_jid -> parse ;
        * src/compat/jlib.erl : API renaming :
                make_jid -> make ;
                parse_jid -> parse ;
        * src/core/exmpp_jid.erl : API renaming :
                make_jid -> make ;
                jid_to_bare_jid -> bare ;
                bare_jid_to_jid -> full ;
                parse_jid -> parse ;
                ldomain -> prep_domain ;
                ldomain_as_list -> prep_domain_as_list ;
                lnode -> prep_node ;
                lnode_as_list -> prep_node_as_list ;
        * src/core/exmpp_stanza.erl : API renaming :
                parse_jid -> parse ;
        * testsuite/jid.erl : API renaming :
                make_jid -> make ;
                jid_to_bare_jid -> bare ;
                bare_jid_to_jid -> full ;
                parse_jid -> parse ;
                ldomain -> prep_domain ;
                ldomain_as_list -> prep_domain_as_list ;
                lnode -> prep_node ;
                lnode_as_list -> prep_node_as_list ;

2009-05-17  Mickael Remond  <mremond@process-one.net>

	* src/core/exmpp_xmlstream.erl: Add option to remove enclosing Bosh tag
	(body).

	* src/network/exmpp_bosh.erl: Preliminary bosh support (XEP-0124).
	* src/network/exmpp_session.erl: Likewise.

	* examples/bosh_client.erl: Example / test bosh client.

2009-04-24  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_presence.erl (set_type/2, set_show/2): Instead of